--- a/demo.html
+++ b/demo.html
@@ -17,7 +17,7 @@
             <li>Endnu et emne i en liste</li>        
             <li>Og endnu et emne i en liste</li>
         </ul>
-        <p>Ovenfor ser du en liste lavet med &lt;ul&gt; og &lt;li&gt;
+        <p>Ovenfor ser du en liste lavet med &lt;ul&gt; og &lt;li&gt;</p>
         <h2>Dette er en h2 overskrift. Den er rød - kig i headeren.</h2>
         <p>En sætning eller et afsnit som denne står i et &lt;p&gt; element</p>
         <a href="https://slotshaven.dk">Dette er et link til Slotshaven</a>       
